--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,10 @@
     <link href='http://fonts.googleapis.com/css?family=Quando|Courgette' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway|Berkshire+Swash' rel='stylesheet' type='text/css'>
 
-    <script type="javascript" src="{{baseurl}}/javascripts/jquery-1.11.3.min.js"></script>
-    <script type="javascript" src="{{baseurl}}/javascripts/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{baseurl}}/javascripts/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="{{baseurl}}/javascripts/bootstrap.min.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js"></script>
-    <script type="javascript" src="{{baseurl}}/javascripts/background.js"></script>
+    <script type="text/javascript" src="{{baseurl}}/javascripts/background.js"></script>
   </head>
   <body class="index">
     {% include navbar.html %}
