--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
     <link href='http://fonts.googleapis.com/css?family=Quando|Courgette' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway|Berkshire+Swash' rel='stylesheet' type='text/css'>
 
-    <script type="text/javascript" src="{{baseurl}}/javascripts/jquery-1.11.3.min.js"></script>
+    <!-- <script type="text/javascript" src="{{baseurl}}/javascripts/jquery-1.11.3.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/bootstrap.min.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/background.js"></script>
