Testing script tag in default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,10 @@
          </div>
       </div>
     </footer>
-
+    <script>
+    $(document).ready(function(){
+      alert("loaded");
+    });
+    </script>
   </body>
 </html>
