Tweaking index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,15 +31,10 @@
              <p>&copy; 2015, Murrows</p>
            </div>
            <div class="col-sm-6">
-             <p>Questions? <a href="www.murrowwedding@gmail.com">Email us.</a></p>
+             <p>Questions? <a href="mailto:murrowwedding@gmail.com?subject=Feedback">Email us.</a></p>
            </div>
          </div>
       </div>
     </footer>
-    <script>
-    $(document).ready(function(){
-      alert("loaded");
-    });
-    </script>
   </body>
 </html>
