--- a/stylesheets/theme.css
+++ b/stylesheets/theme.css
@@ -1,3 +1,5 @@
+/* Fonts */
+
 html,
 body {
   font-family: 'Raleway', serif;
@@ -18,4 +20,86 @@ h6 {
 
 .body-font {
   font-family: 'Raleway', serif;
+}
+
+/* Colors */
+
+/*
+ * =========== Theme stuff ===========
+ */
+
+body {
+  color: #fff;
+  /*text-shadow: 0 1px 3px rgba(0,0,0,.5);*/
+  background-color: #333;
+}
+
+.site-wrapper {
+  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+}
+
+.navbar-default {
+  background-color: transparent;
+  border: 0px;
+}
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active:hover > a,
+.navbar-default .navbar-nav > .active:focus > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  background-color: transparent;
+  color: #fff;
+  border-bottom: 1px solid #fff;
+  border-bottom-color: #fff;
+}
+
+.navbar-default .navbar-nav > li > a {
+  color: #fff;  /* IE8 proofing */
+  color: rgba(255,255,255,.75);
+
+}
+
+.navbar-default .navbar-nav > li:hover > a
+.navbar-default .navbar-nav > li:focus > a,
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #fff;  /* IE8 proofing */
+  color: rgba(255,255,255,.75);
+  border-bottom: 1px solid #a9a9a9;
+  border-bottom-color: rgba(255,255,255,.25);
+}
+
+.navbar-default .navbar-brand,
+.navbar-default .navbar-brand:hover {
+  color: #fff;
+}
+
+/*
+ * Footer
+ */
+
+.footer {
+  color: #999; /* IE8 proofing */
+  color: rgba(255,255,255,.5);
+  background-color: transparent;
+}
+
+/* Links */
+a {
+  color: #ccc;
+}
+
+a:focus,
+a:hover {
+  color: #fff;
+}
+
+/* Custom hr
+Gradient transparent - color - transparent */
+.hr-custom {
+  border: 0;
+  height: 2px;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
 }
