--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand header-font" href="index.html">C & T</a>
+      <a class="navbar-brand header-font" href="{{baseurl}}/">C &amp; T</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -16,10 +16,10 @@
       <ul class="nav navbar-nav">
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.html">HOME</a></li>
-        <li class="active"><a href="info.html">INFO</a></li>
-        <li><a href="story.html">OUR STORY</a></li>
-        <li><a href="rsvp.html">RSVP</a></li>
+        <li {% if {{page.title}} contains 'Murrow' %}class="active"{% endif %}><a href="{{baseurl}}/">HOME</a></li>
+        <li {% if {{page.title}} contains 'Info' %}class="active"{% endif %}><a href="{{baseurl}}/info">INFO</a></li>
+        <li {% if {{page.title}} contains 'Story' %}class="active"{% endif %}><a href="{{baseurl}}/story">OUR STORY</a></li>
+        <li {% if {{page.title}} contains 'RSVP' %}class="active"{% endif %}><a href="{{baseurl}}/rsvp">RSVP</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
