--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -11,6 +11,7 @@ body {
 
 .cover-heading {
   text-align: center;
+  font-size: 500%;
 }
 
 /* cover page spacer */
@@ -28,7 +29,7 @@ body {
 
 @media (min-width: 1200px) {
   .spacer {
-    height: 200px;
+    height: 350px;
   }
 }
 
