Added registry page, changed default layout and navbar, updated info page, wrote story page for loop

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,6 +19,7 @@
         <li {% if {{page.title}} contains 'Murrow' %}class="active"{% endif %}><a href="{{baseurl}}/">HOME</a></li>
         <li {% if {{page.title}} contains 'Info' %}class="active"{% endif %}><a href="{{baseurl}}/info">INFO</a></li>
         <li {% if {{page.title}} contains 'Story' %}class="active"{% endif %}><a href="{{baseurl}}/story">OUR STORY</a></li>
+        <li {% if {{page.title}} contains 'Registry' %}class="active"{% endif %}><a href="{{baseurl}}/registry">REGISTRY</a></li>
         <li {% if {{page.title}} contains 'RSVP' %}class="active"{% endif %}><a href="{{baseurl}}/rsvp">RSVP</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
