--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -32,20 +32,39 @@ body {
 
 /* cover page spacer */
 @media (min-width: 768px) {
-  .spacer {
+  .cover-spacer {
     height: 50px;
   }
 }
 
 @media (min-width: 992px) {
-  .spacer {
+  .cover-spacer {
     height: 100px;
   }
 }
 
 @media (min-width: 1200px) {
-  .spacer {
+  .cover-spacer {
     height: 350px;
+  }
+}
+
+/* other page spacer */
+@media (min-width: 768px) {
+  .spacer {
+    height: 25px;
+  }
+}
+
+@media (min-width: 992px) {
+  .spacer {
+    height: 50px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .spacer {
+    height: 75px;
   }
 }
 
