--- a/stylesheets/theme.css
+++ b/stylesheets/theme.css
@@ -36,10 +36,17 @@ body {
 }
 
 .navbar-default {
-  background-color: transparent;
-  /*background-color: rgba(0,0,0,.5);*/
+  background-color: rgba(0,0,0,.5);
   border: 0px;
   font-size: 150%;
+}
+
+@media (min-width: 992px) {
+  .navbar-default {
+    background-color: transparent;
+    border: 0px;
+    font-size: 150%;
+  }
 }
 
 .navbar-default .navbar-nav > .active > a,
