--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -1,3 +1,36 @@
+/* RSVP page styles */
+
+/* Styling yes/no RSVP checkboxes */
+#rsvp-yes,
+#rsvp-no {
+  border: none;
+  background-color: transparent;
+}
+
+#rsvp-yes.active,
+#rsvp-no.active,
+#rsvp-yes:hover,
+#rsvp-no:hover {
+  border: none;
+  background-color: transparent;
+  box-shadow: none;
+}
+
+/* styling radio buttons */
+.radio-text {
+  display: inline;
+  width: 25px;
+  height: 25px;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-radius: 0;
+  box-shadow: none;
+  padding: 0 5px;
+}
+
+/* ----- */
+
 
 .test {
   text-align: center;
