--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,13 @@
     <script type="text/javascript" src="{{baseurl}}/javascripts/bootstrap.min.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/background.js"></script>
+
+    <script type="text/javascript" src="modernizr.min.js"></script>
+    <script type="text/javascript" src="https://mandrillapp.com/api/docs/js/mandrill.js"></script>
+    <script type="text/javascript" src="{{baseurl}}/javascripts/send-email.js"></script>
+    <script type="text/javascript" src="{{baseurl}}/javascripts/rsvp.js"></script>
+    <script type="text/javascript" src="{{baseurl}}/javascripts/cookie-monster.js"></script>
+
   </head>
   <body class={% if {{page.title}} contains 'Murrow' %}index{%else%}other{%endif%}>
     {% include navbar.html %}
