--- a/stylesheets/theme.css
+++ b/stylesheets/theme.css
@@ -1,3 +1,87 @@
+/* RSVP page styles */
+
+/* Custom default button */
+
+.btn-default {
+  color: #ccc;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #333;
+  border: 1.5px solid #777;
+}
+
+.btn-default:hover,
+.btn-default:focus,
+.btn-default.active{
+  color: #fff;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #444;
+  border: 1.5px solid #fff;
+}
+
+.btn-default:disabled {
+  color: #ccc;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #444;
+  border: 1.5px solid #777;
+}
+
+.btn-primary {
+  color: #333;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #fff;
+  border: 1px solid #666;
+}
+
+.btn-primary:hover,
+.btn-primary:focus {
+  color: #000;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #ddd;
+  border: 1px solid #333;
+}
+
+.form-control {
+  background-color: #333;
+  color: #ccc;
+}
+
+.form-control:hover {
+  background-color: #444;
+  color: #fff;
+  border-color: #fff;
+}
+
+.input-group-addon,
+.form-control {
+  border-color: #777;
+}
+
+.input-group-addon {
+  background-color: #555;
+  color: #bbb;
+  width: 70px;
+}
+
+.input-group {
+  width: 100%; /* Fixes width: 70px from input-group-addon */
+}
+
+.input-symbol {
+  color: #999;
+}
+
+.form-control:hover .input-symbol {
+  color: #fff;
+}
+
+div {
+  text-shadow: none;
+}
+
+/* ----end RSVP page styles--------- */
+
+
+
 /* Fonts */
 
 html,
