Changed cookie-monster to local-storage-monster

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="https://mandrillapp.com/api/docs/js/mandrill.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/send-email.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/rsvp.js"></script>
-    <script type="text/javascript" src="{{baseurl}}/javascripts/cookie-monster.js"></script>
+    <script type="text/javascript" src="{{baseurl}}/javascripts/local-storage-monster.js"></script> <!--or cookie-monster-->
 
   </head>
   <body class={% if {{page.title}} contains 'Murrow' %}index{%else%}other{%endif%}>
