Commented out modernizr

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,12 @@
     <script src="http://maps.googleapis.com/maps/api/js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/background.js"></script>
 
-    <script type="text/javascript" src="modernizr.min.js"></script>
+    <!--<script type="text/javascript" src="modernizr.min.js"></script>-->
     <script type="text/javascript" src="https://mandrillapp.com/api/docs/js/mandrill.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/send-email.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/rsvp.js"></script>
-    <script type="text/javascript" src="{{baseurl}}/javascripts/local-storage-monster.js"></script> <!--or cookie-monster-->
+    <!--<script type="text/javascript" src="{{baseurl}}/javascripts/local-storage-monster.js"></script>-->
+    <script type="text/javascript" src="{{baseurl}}/javascripts/local-storage-monster.js"></script>
 
   </head>
   <body class={% if {{page.title}} contains 'Murrow' %}index{%else%}other{%endif%}>
