--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,91 +1,12 @@
-<div class="row">
-  <div class="panel panel-default">
-    <div class="panel-heading show-map initialize-map" data-toggle="collapse" data-target="#mapDetails">
-      <div class="panel-title"><span class="left glyphicon glyphicon-triangle-right"></span> <span class="panel-title-text">Show Map</span> <span class="right glyphicon glyphicon-triangle-left"></span></div>
-    </div>
+<div id="map"></div>
+<script type="text/javascript">
 
-    <div class="collapse" id="mapDetails">
+var map;
+function initMap() {
+map = new google.maps.Map(document.getElementById('map'), {
+center: {lat: -34.397, lng: 150.644},
+zoom: 8
+});
+}
 
-      <div class="panel-body">
-
-        <div class="row">
-          <div class="col-sm-7">
-            <div class="map">
-              <div id="map-canvas"></div>
-              <button class="btn btn-danger btn-block disabled" id="reset-map">Reset Map <span class="glyphicon glyphicon-map-marker"></span></button>
-            </div>
-          </div>
-          <div class="col-sm-5">
-            <!--<div class="row">
-              <div class="col-sm-12">
-                <button class="btn btn-default" id="reset-map">Reset Map</button>
-              </div>
-            </div>-->
-
-            <div class="row">
-              <div class="col-sm-12">
-                <h3>Directions</h3>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-sm-12">
-                <div class="form-horizontal">
-
-                  <div class="form-group">
-                    <div class="input-group">
-                      <span class="input-group-addon">To:</span>
-                      <div class="form-control text-left truncate">
-                        Bethany First Church of the Nazarene
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <div class="input-group">
-                      <span class="input-group-addon">From:</span>
-                      <select id="start" onchange="calcRoute();" class="form-control selectpicker">
-                        <option value="oklahoma city, ok">Oklahoma City, OK</option>
-                        <option value="allen, tx">Allen, TX</option>
-                        <option value="corpus christi, tx">Corpus Christi, TX</option>
-                        <option value="greenville, tx">Greenville, TX</option>
-                        <option value="nashville, tn">Nashville, TN</option>
-                        <option value="rockdale, tx">Rockdale, TX</option>
-                        <option value="van alstyne, tx">Van Alstyne, TX</option>
-                      </select>
-                    </div>
-                  </div>
-
-                  <div class="directions-details hidden">
-                    <div class="form-group">
-                      <label class="control-label col-xs-4">Time</label>
-                      <div class="col-xs-8">
-                        <p class="text-left" id="duration"></p>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="control-label col-xs-4">Distance</label>
-                      <div class="col-xs-8">
-                        <p class="text-left" id="distance"></p>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="col-sm-offset-4 col-sm-8">
-                        <button type="button" class="btn btn-default btn-block" id="getDirections" data-toggle="modal" data-target="#directionsModal">Get directions</button>
-                      </div>
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div><!-- row -->
-
-      </div>
-
-    </div>
-
-  </div>
-</div>
+</script>
