--- a/stylesheets/theme.css
+++ b/stylesheets/theme.css
@@ -180,6 +180,36 @@ body {
 }
 
 /*
+ * Panels
+ */
+
+.panel-default,
+.panel-default > .panel-heading {
+  background-color: transparent;
+  border-color: transparent;
+  box-shadow: none;
+}
+
+.panel-default {
+  color: #fff;
+  margin: 0;
+}
+
+.panel-default > .panel-heading {
+  color: #ccc;
+}
+
+.panel-default > .panel-heading:hover {
+  color: #fff;
+  background-image: linear-gradient(to right, rgba(68, 68, 68, 0), rgba(68, 68, 68, 0.75), rgba(68, 68, 68, 0));
+}
+
+.panel-title {
+  font-size: inherit;
+  font-weight: bold;
+}
+
+/*
  * Footer
  */
 
