--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/bootstrap.min.js"></script>
 
-  
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/background.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/map.js"></script>
     <script type="text/javascript" src="https://mandrillapp.com/api/docs/js/mandrill.js"></script>
