--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,12 +14,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/bootstrap.min.js"></script>
 
-
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/background.js"></script>
+
+    <script src="http://maps.googleapis.com/maps/api/js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/map.js"></script>
+
     <script type="text/javascript" src="https://mandrillapp.com/api/docs/js/mandrill.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/send-email.js"></script>
+    
     <script type="text/javascript" src="{{baseurl}}/javascripts/rsvp.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/local-storage-monster.js"></script>
 
