Got the map to work!

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,12 +1,9 @@
-<style>
-  html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  #map {
-    height: 100%;
-  }
-</style>
-
-<div id="map"></div>
+<div class="row">
+  <div class="col-md-6">
+    <div id="map"></div>
+  </div>
+  <div class="col-md=6">
+    <h2>Directions</h2>
+    
+  </div>
+</div>
