--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="{{baseurl}}/stylesheets/bootstrap.min.css" />
-    <link rel="stylesheet" href="{{baseurl}}/stylesheets/site.css" />
-    <link rel="stylesheet" href="{{baseurl}}/stylesheets/theme.css" />
+    <!-- <link rel="stylesheet" href="{{baseurl}}/stylesheets/site.css" />
+    <link rel="stylesheet" href="{{baseurl}}/stylesheets/theme.css" /> -->
+    <link rel="stylesheet" href="{{baseurl}}/stylesheets/stylesheet.css" />
     <link href='http://fonts.googleapis.com/css?family=Quando|Courgette' rel='stylesheet' type='text/css'>
+
+
     <link href='http://fonts.googleapis.com/css?family=Raleway|Berkshire+Swash' rel='stylesheet' type='text/css'>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -16,14 +19,18 @@
 
     <script type="text/javascript" src="{{baseurl}}/javascripts/background.js"></script>
 
-    <script src="http://maps.googleapis.com/maps/api/js"></script>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQQ8a-J0J964VkNb1a6xSVBAR-6QcJe2A&callback=initMap">
+    </script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/map.js"></script>
 
     <script type="text/javascript" src="https://mandrillapp.com/api/docs/js/mandrill.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/send-email.js"></script>
-    
+
     <script type="text/javascript" src="{{baseurl}}/javascripts/rsvp.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/local-storage-monster.js"></script>
+
+    <script type="text/javascript" src="{{baseurl}}/javascripts/main.js"></script>
 
   </head>
   <body class={% if {{page.title}} contains 'Murrow' %}index{%else%}other{%endif%}>
@@ -45,7 +52,7 @@
       <div class="container">
         <div class="row">
            <div class="col-sm-6">
-             <p>Created by us &lt;3</p>
+             <p>Created by Corbin and mostly Tanya &lt;3</p>
            </div>
            <div class="col-sm-6">
              <p>Questions? <a href="mailto:murrowwedding@gmail.com?subject=Feedback">Email us.</a></p>
