--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,247 +1,389 @@
-body {
-  margin: 0;
-  padding: 0;
-  background: #151515 url("../images/bkg.png") 0 0;
-  color: #eaeaea;
-  font: 16px;
-  line-height: 1.5;
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-}
-
-/* General & 'Reset' Stuff */
-
-.container {
-  width: 90%;
-  max-width: 600px;
-  margin: 0 auto;
-}
-
-section {
-  display: block;
-  margin: 0 0 20px 0;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0 0 20px;
-}
-
-li {
-  line-height: 1.4 ;
-}
-
-/* Header, <header>
-   header   - container
-   h1       - project name
-   h2       - project description
-*/
-
-header {
-  background: rgba(0, 0, 0, 0.1);
+#map {
   width: 100%;
-  border-bottom: 1px dashed #b5e853;
-  padding: 20px 0;
-  margin: 0 0 40px 0;
+  height: 300px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
-header h1 {
-  font-size: 30px;
-  line-height: 1.5;
-  margin: 0 0 0 -40px;
-  font-weight: bold;
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  color: #b5e853;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
-               0 0 5px rgba(181, 232, 83, 0.1),
-               0 0 10px rgba(181, 232, 83, 0.1);
-  letter-spacing: -1px;
-  -webkit-font-smoothing: antialiased;
+.navbar {transition-duration: 0.25s;}
+
+/* RSVP page styles */
+
+/* Styling yes/no RSVP checkboxes */
+#rsvp-yes,
+#rsvp-no {
+  color: #ccc;
+  border: none;
+  background-color: transparent;
 }
 
-header h1:before {
-  content: "./ ";
-  font-size: 24px;
+#rsvp-yes.active,
+#rsvp-no.active,
+#rsvp-yes:hover,
+#rsvp-no:hover {
+  color: #fff;
+  border: none;
+  background-color: transparent;
+  box-shadow: none;
 }
 
-header h2 {
-  font-size: 18px;
-  font-weight: 300;
-  color: #666;
+/* styling radio buttons */
+.radio-text {
+  display: inline;
+  width: 25px;
+  height: 25px;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-radius: 0;
+  box-shadow: none;
+  padding: 0 5px;
 }
 
-#downloads .btn {
-  display: inline-block;
+/* ----- */
+
+.test {
   text-align: center;
+}
+
+.registry-img {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  border: 0px;
+}
+
+.registry-img:hover {
+  border-bottom: 2px solid #fff;
+  border-bottom-color: rgba(255,255,255,.25);
+}
+
+/* Cycling background image ---------------------- */
+body {
+  /*background-image: url('../images/photo1.jpg');*/
+  background-attachment: fixed;
+  background-position: center center;
+  background-size: cover;
+}
+
+/* Header font centering */
+
+.cover-heading {
+  text-align: center;
+  font-size: 500%;
+}
+
+/* cover page spacer */
+@media (min-width: 768px) {
+  .cover-spacer {
+    height: 50px;
+  }
+}
+
+@media (min-width: 992px) {
+  .cover-spacer {
+    height: 100px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .cover-spacer {
+    height: 350px;
+  }
+}
+
+/* other page spacer */
+@media (min-width: 768px) {
+  .spacer {
+    height: 25px;
+  }
+}
+
+@media (min-width: 992px) {
+  .spacer {
+    height: 50px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .spacer {
+    height: 75px;
+  }
+}
+
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+
+body > .container {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
+
+.footer p {
+  margin: 20px 0;
+  text-align: center;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+
+/* RSVP page styles */
+
+/* Custom default button */
+
+.btn-default {
+  color: #ccc;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #333;
+  border: 1.5px solid #777;
+}
+
+.btn-default:hover,
+.btn-default:focus,
+.btn-default.active{
+  color: #fff;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #444;
+  border: 1.5px solid #fff;
+}
+
+.btn-default:disabled {
+  color: #ccc;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #444;
+  border: 1.5px solid #777;
+}
+
+.btn-primary {
+  color: #333;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #fff;
+  border: 1px solid #666;
+}
+
+.btn-primary:hover,
+.btn-primary:focus {
+  color: #000;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #ddd;
+  border: 1px solid #333;
+}
+
+.form-control {
+  background-color: #333;
+  color: #ccc;
+}
+
+.form-control:hover {
+  background-color: #444;
+  color: #fff;
+  border-color: #fff;
+}
+
+.input-group-addon,
+.form-control {
+  border-color: #777;
+}
+
+.input-group-addon {
+  background-color: #555;
+  color: #bbb;
+  width: 70px;
+}
+
+.input-group {
+  width: 100%; /* Fixes width: 70px from input-group-addon */
+}
+
+.input-symbol {
+  color: #999;
+}
+
+.form-control:hover .input-symbol {
+  color: #fff;
+}
+
+div {
+  text-shadow: none;
+}
+
+/* ----end RSVP page styles--------- */
+
+
+
+/* Fonts */
+
+html,
+body {
+  font-family: 'Raleway', serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Berkshire Swash', serif;
+}
+
+.header-font {
+  font-family: 'Berkshire Swash', serif;
+}
+
+.body-font {
+  font-family: 'Raleway', serif;
+}
+
+/* Colors */
+
+body {
+  color: #fff;
+  /*text-shadow: 0 1px 3px rgba(0,0,0,.5);*/
+  background-color: #333;
+}
+
+.site-wrapper {
+  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+}
+
+.navbar-default {
+  background-color: transparent;
+  border: 0px;
+  font-size: 150%;
+}
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active:hover > a,
+.navbar-default .navbar-nav > .active:focus > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  background-color: #333;
+  color: #fff;
+  border-bottom: 1px solid #fff;
+  border-bottom-color: #fff;
+}
+
+@media (min-width: 992px) {
+  .navbar-default .navbar-nav > .active > a,
+  .navbar-default .navbar-nav > .active:hover > a,
+  .navbar-default .navbar-nav > .active:focus > a,
+  .navbar-default .navbar-nav > .active > a:hover,
+  .navbar-default .navbar-nav > .active > a:focus {
+    background-color: transparent;
+    color: #fff;
+    border-bottom: 1px solid #fff;
+    border-bottom-color: #fff;
+  }
+}
+
+.navbar-default .navbar-nav > li > a {
+  color: #fff;  /* IE8 proofing */
+  color: rgba(255,255,255,.75);
+  background-color: #333;
+}
+
+@media (min-width: 992px) {
+  .navbar-default .navbar-nav > li > a {
+    color: #fff;  /* IE8 proofing */
+    color: rgba(255,255,255,.75);
+    background-color: transparent;
+    }
+  }
+
+.navbar-default .navbar-nav > li:hover > a
+.navbar-default .navbar-nav > li:focus > a,
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #fff;  /* IE8 proofing */
+  color: rgba(255,255,255,.75);
+  border-bottom: 1px solid #a9a9a9;
+  border-bottom-color: rgba(255,255,255,.25);
+}
+
+.navbar-default .navbar-brand,
+.navbar-default .navbar-brand:hover {
+  color: #fff;
+  font-size: 150%;
+}
+
+/*
+ * Panels
+ */
+
+.panel-default,
+.panel-default > .panel-heading {
+  background-color: transparent;
+  border-color: transparent;
+  box-shadow: none;
+}
+
+.panel-default {
+  color: #fff;
   margin: 0;
 }
 
-/* Main Content
-*/
-
-#main_content {
-  width: 100%;
-  -webkit-font-smoothing: antialiased;
-}
-section img {
-  max-width: 100%
+.panel-default > .panel-heading {
+  color: #ccc;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  color: #b5e853;
-  letter-spacing: -0.03em;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
-               0 0 5px rgba(181, 232, 83, 0.1),
-               0 0 10px rgba(181, 232, 83, 0.1);
+.panel-default > .panel-heading:hover {
+  color: #fff;
+  background-image: linear-gradient(to right, rgba(68, 68, 68, 0), rgba(68, 68, 68, 0.75), rgba(68, 68, 68, 0));
 }
 
-#main_content h1 {
-  font-size: 30px;
-}
-
-#main_content h2 {
-  font-size: 24px;
-}
-
-#main_content h3 {
-  font-size: 18px;
-}
-
-#main_content h4 {
-  font-size: 14px;
-}
-
-#main_content h5 {
-  font-size: 12px;
-  text-transform: uppercase;
-  margin: 0 0 5px 0;
-}
-
-#main_content h6 {
-  font-size: 12px;
-  text-transform: uppercase;
-  color: #999;
-  margin: 0 0 5px 0;
-}
-
-dt {
-  font-style: italic;
+.panel-title {
+  font-size: inherit;
   font-weight: bold;
 }
 
-ul li {
-  list-style: none;
+/*
+ * Footer
+ */
+
+.footer {
+  color: #999; /* IE8 proofing */
+  color: rgba(255,255,255,.5); /* should this be commented?*/
+  background-color: transparent;
+  /*background-color: rgba(0,0,0,.5);*/
 }
 
-ul li:before {
-  content: ">>";
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  font-size: 13px;
-  color: #b5e853;
-  margin-left: -37px;
-  margin-right: 21px;
-  line-height: 16px;
-}
-
-blockquote {
-  color: #aaa;
-  padding-left: 10px;
-  border-left: 1px dotted #666;
-}
-
-pre {
-  background: rgba(0, 0, 0, 0.9);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  padding: 10px;
-  font-size: 14px;
-  color: #b5e853;
-  border-radius: 2px;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  text-wrap: normal;
-  overflow: auto;
-  overflow-y: hidden;
-}
-
-table {
-  width: 100%;
-  margin: 0 0 20px 0;
-}
-
-th {
-  text-align: left;
-  border-bottom: 1px dashed #b5e853;
-  padding: 5px 10px;
-}
-
-td {
-  padding: 5px 10px;
-}
-
-hr {
-  height: 0;
-  border: 0;
-  border-bottom: 1px dashed #b5e853;
-  color: #b5e853;
-}
-
-/* Buttons
-*/
-
-.btn {
-  display: inline-block;
-  background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.3), rgba(35, 35, 35, 0.3) 50%, rgba(10, 10, 10, 0.3) 50%, rgba(0, 0, 0, 0.3));
-  padding: 8px 18px;
-  border-radius: 50px;
-  border: 2px solid rgba(0, 0, 0, 0.7);
-  border-bottom: 2px solid rgba(0, 0, 0, 0.7);
-  border-top: 2px solid rgba(0, 0, 0, 1);
-  color: rgba(255, 255, 255, 0.8);
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
-  font-size: 13px;
-  text-decoration: none;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
-}
-
-.btn:hover {
-  background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.6), rgba(35, 35, 35, 0.6) 50%, rgba(10, 10, 10, 0.8) 50%, rgba(0, 0, 0, 0.8));
-}
-
-.btn .icon {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  margin: 1px 8px 0 0;
-  float: left;
-}
-
-.btn-github .icon {
-  opacity: 0.6;
-  background: url("../images/blacktocat.png") 0 0 no-repeat;
-}
-
-/* Links
-   a, a:hover, a:visited
-*/
-
+/* Links */
 a {
-  color: #63c0f5;
-  text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
+  color: #ccc;
 }
 
-/* Clearfix */
-
-.cf:before, .cf:after {
-  content:"";
-  display:table;
+a:focus,
+a:hover {
+  color: #fff;
 }
 
-.cf:after {
-  clear:both;
-}
-
-.cf {
-  zoom:1;
+/* Custom hr
+Gradient: transparent - color - transparent */
+.hr-custom {
+  border: 0;
+  height: 2px;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
 }
