--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,9 @@
     <script type="text/javascript" src="{{baseurl}}/javascripts/background.js"></script>
 
     <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQQ8a-J0J964VkNb1a6xSVBAR-6QcJe2A&callback=initMap">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQQ8a-J0J964VkNb1a6xSVBAR-6QcJe2A">
     </script>
+    <!-- &callback=initMap -->
     <script type="text/javascript" src="{{baseurl}}/javascripts/map.js"></script>
 
     <script type="text/javascript" src="https://mandrillapp.com/api/docs/js/mandrill.js"></script>
@@ -29,6 +30,8 @@
 
     <script type="text/javascript" src="{{baseurl}}/javascripts/rsvp.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/local-storage-monster.js"></script>
+
+    <script type="text/javascript" src="{{baseurl}}/javascripts/map.js"></script>
 
     <script type="text/javascript" src="{{baseurl}}/javascripts/main.js"></script>
 
