Remove 'async defer' from google maps api reference

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 
     <script type="text/javascript" src="{{baseurl}}/javascripts/background.js"></script>
 
-    <script async defer
+    <script 
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQQ8a-J0J964VkNb1a6xSVBAR-6QcJe2A">
     </script>
     <!-- &callback=initMap -->
