--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
     <!-- <link rel="stylesheet" href="{{baseurl}}/stylesheets/site.css" />
     <link rel="stylesheet" href="{{baseurl}}/stylesheets/theme.css" /> -->
     <link rel="stylesheet" href="{{baseurl}}/stylesheets/stylesheet.css" />
+    <link rel="stylesheet" href="{{baseurl}}/stylesheets/timeline.css" />
+
     <link href='http://fonts.googleapis.com/css?family=Quando|Courgette' rel='stylesheet' type='text/css'>
 
 
@@ -19,7 +21,7 @@
 
     <script type="text/javascript" src="{{baseurl}}/javascripts/background.js"></script>
 
-    <script 
+    <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQQ8a-J0J964VkNb1a6xSVBAR-6QcJe2A">
     </script>
     <!-- &callback=initMap -->
