--- a/_includes/directions-modal.html
+++ b/_includes/directions-modal.html
@@ -11,7 +11,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <a href="#" class="btn btn-primary directions-google-maps">Open in Google Maps</a>
+        <a href="#" target="_blank" class="btn btn-primary directions-google-maps">Open in Google Maps</a>
       </div>
     </div>
   </div>
