--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,3 +1,7 @@
+.modal-title {
+  color: #333;
+  text-align: center;
+}
 
 /* Other */
 
@@ -18,6 +22,10 @@
 #reset-map {
   border-top-right-radius: 0;
   border-top-left-radius: 0;
+}
+
+img.adp-marker {
+  margin: 5px;
 }
 
 /* ---- */
