Nix the timeline, just do basic 'about' and important events

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,3 +1,26 @@
+/*.event {
+  background-color: #333;
+  background-color: rgba(51, 51, 51, 0.5);
+  border-radius: 10px;
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid white;
+}
+
+
+.face-small {
+  border: 2px solid white;
+  width: 72px;
+  height: 72px;
+}*/
+
+.face-corbin,
+.face-tanya {
+  border: 2px solid white;
+  width: 144px;
+  height: 144px;
+}
+
 .modal-title {
   color: #333;
   text-align: center;
@@ -367,35 +390,39 @@ body {
   border-bottom-color: rgba(255,255,255,.25);
 }
 
-.navbar-default .navbar-brand,
+.navbar-default .navbar-brand {
+  color: #fff;
+  color: rgba(255,255,255,.75);
+  font-size: 150%;
+}
+
 .navbar-default .navbar-brand:hover {
   color: #fff;
-  font-size: 150%;
 }
 
 /*
  * Panels
  */
 
-.panel-default,
-.panel-default > .panel-heading {
+.panel-default.panel-map,
+.panel-default.panel-map > .panel-heading {
   background-color: transparent;
   border-color: transparent;
   box-shadow: none;
 }
 
-.panel-default {
+.panel-default.panel-map {
   color: #fff;
   margin: 0;
 }
 
-.panel-default > .panel-heading {
+.panel-default.panel-map > .panel-heading {
   color: #ccc;
 }
 
-.panel-default > .panel-heading:hover {
+.panel-default.panel-map > .panel-heading:hover {
   color: #fff;
-  background-image: linear-gradient(to right, rgba(68, 68, 68, 0), rgba(68, 68, 68, 0.75), rgba(68, 68, 68, 0));
+  background-image: linear-gradient(to right, rgba(51, 51, 51, 0), rgba(51, 51, 51, 0.85), rgba(51, 51, 51, 0));
 }
 
 .panel-title {
