--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <div class="panel panel-default">
+    <div class="panel panel-default panel-map">
 
       <div class="panel-heading show-map initialize-map" data-toggle="collapse" data-target="#mapDetails">
         <div class="panel-title"><span class="left glyphicon glyphicon-triangle-right"></span> <span class="panel-title-text">Show Map</span> <span class="right glyphicon glyphicon-triangle-left"></span></div>
