--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,12 @@
     <!-- <link rel="stylesheet" href="{{baseurl}}/stylesheets/site.css" />
     <link rel="stylesheet" href="{{baseurl}}/stylesheets/theme.css" /> -->
     <link rel="stylesheet" href="{{baseurl}}/stylesheets/stylesheet.css" />
-    <link rel="stylesheet" href="{{baseurl}}/stylesheets/timeline.css" />
+    <!-- <link rel="stylesheet" href="{{baseurl}}/stylesheets/timeline.css" /> -->
 
     <link href='http://fonts.googleapis.com/css?family=Quando|Courgette' rel='stylesheet' type='text/css'>
-
-
     <link href='http://fonts.googleapis.com/css?family=Raleway|Berkshire+Swash' rel='stylesheet' type='text/css'>
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/bootstrap.min.js"></script>
@@ -57,7 +57,7 @@
       <div class="container">
         <div class="row">
            <div class="col-sm-6">
-             <p>Created by Corbin and mostly Tanya &lt;3</p>
+             <p>Created by Corbin and Tanya &#9825; <span class="glyphicon glyphicon-heart-empty"></span></p>
            </div>
            <div class="col-sm-6">
              <p>Questions? <a href="mailto:murrowwedding@gmail.com?subject=Feedback">Email us.</a></p>
