--- a/stylesheets/timeline.css
+++ b/stylesheets/timeline.css
@@ -2,6 +2,7 @@
   list-style: none;
   padding: 20px 0 20px;
   position: relative;
+  text-align: center;
 }
 
 .timeline:before {
@@ -52,6 +53,7 @@
   position: relative;
   -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  background-color: rgba(51, 51, 51, 0.65);
 }
 
 .timeline > li > .timeline-panel:before {
@@ -78,20 +80,6 @@
   content: " ";
 }
 
-/*
-.timeline > li > .timeline-badge {
-  color: #fff;
-  width: 24px;
-  height: 24px;
-  line-height: 50px;
-  font-size: 1.4em;
-  text-align: center;
-  position: absolute;
-  top: 16px;
-  right: -12px;
-  z-index: 100;
-}*/
-
 .timeline > li.timeline-inverted > .timeline-panel,
 .timeline > li:nth-child(even) > .timeline-panel {
   float: right;
@@ -112,21 +100,6 @@
   left: -14px;
   right: auto;
 }
-
-/* changed
-.timeline-badge > a {
-  color: #C5C7C5 !important;
-}*/
-
-.timeline-badge a:hover {
-  color: #000 !important;
-}
-
-/* changed
-.timeline-title {
-  margin-top: 0;
-  color: inherit;
-}*/
 
 .timeline-body > p,
 .timeline-body > ul {
@@ -246,13 +219,6 @@
   margin-top: 60px;
 }
 
-
-
-.timeline > li.timeline-inverted > .timeline-badge,
-.timeline > li:nth-child(even) > .timeline-badge {
-  left: -12px;
-}
-
 @media (max-width: 767px) {
   ul.timeline:before {
     left: 40px;
@@ -269,12 +235,6 @@
     width: -moz-calc(100% - 90px);
     width: -webkit-calc(100% - 90px);
   }
-  /* changed
-  ul.timeline > li > .timeline-badge {
-    left: 28px;
-    margin-left: 0;
-    top: 16px;
-  }*/
   ul.timeline > li > .timeline-panel {
     float: right;
   }
@@ -297,65 +257,4 @@
     margin-top: 30px;
     margin-bottom: 30px;
   }
-  /* changed
-  .timeline > li.timeline-inverted > .timeline-badge {
-    left: 28px;
-  }*/
-}
-
-/* Custom changes */
-
-.timeline > li > .timeline-badge {
-  color: #fff;
-  width: 50px;
-  height: 50px;
-  line-height: 55px;
-  font-size: 2em;
-  text-align: center;
-  position: absolute;
-  top: 16px;
-  left: 100%;
-  margin-left: -25px;
-  background-color: #999999;
-  z-index: 100;
-  border-radius: 50%;
-}
-
-.timeline > li.timeline-inverted > .timeline-badge,
-.timeline > li:nth-child(even) > .timeline-badge {
-  left: 0%;
-}
-
-.timeline-badge.primary {
-  background-color: #2e6da4 !important;
-}
-
-.timeline-badge.success {
-  background-color: #3f903f !important;
-}
-
-.timeline-badge.warning {
-  background-color: #f0ad4e !important;
-}
-
-.timeline-badge.danger {
-  background-color: #d9534f !important;
-}
-
-.timeline-badge.info {
-  background-color: #5bc0de !important;
-}
-
-@media (max-width: 767px) {
-  ul.timeline > li > .timeline-badge,
-  ul.timeline > li.timeline-inverted > .timeline-badge,
-  ul.timeline > li:nth-child(even) > .timeline-badge {
-    left: 15px;
-    margin-left: 0;
-    top: 16px;
-  }
-}
-
-.timeline-badge {
-  display: none !important;
 }
