--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset='utf-8'>
@@ -37,6 +37,7 @@
 
     <script type="text/javascript" src="{{baseurl}}/javascripts/main.js"></script>
 
+    <link rel="shortcut icon" href="{{baseurl}}/bride-and-groom.ico" />
   </head>
   <body class={% if {{page.title}} contains 'Murrow' %}index{%else%}other{%endif%}>
     {% include navbar.html %}
