Info page changes

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -3,7 +3,7 @@
     <div class="panel panel-default panel-map">
 
       <div class="panel-heading show-map initialize-map" data-toggle="collapse" data-target="#mapDetails">
-        <div class="panel-title"><span class="left glyphicon glyphicon-triangle-right"></span> <span class="panel-title-text">Show Map</span> <span class="right glyphicon glyphicon-triangle-left"></span></div>
+        <div class="panel-title text-center"><span class="left glyphicon glyphicon-triangle-right"></span> <span class="panel-title-text">Show Map</span> <span class="right glyphicon glyphicon-triangle-left"></span></div>
       </div>
 
       <div class="collapse" id="mapDetails">
