--- a/_includes/map.html
+++ b/_includes/map.html
@@ -16,7 +16,7 @@
               <button class="btn btn-danger btn-block disabled" id="reset-map">Reset Map <span class="glyphicon glyphicon-map-marker"></span></button>
             </div>
             <div class="col-md-6">
-              <h2>Directions</h2>
+              <h2 class="text-center">Directions</h2>
 
               <div class="form-horizontal">
                 <div class="form-group">
