--- a/_includes/rsvp-modals.html
+++ b/_includes/rsvp-modals.html
@@ -9,6 +9,7 @@
         <p>Your RSVP has been sent!</p>
       </div>
       <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-default" data-dismiss="modal" onClick="window.location.reload();">Okay</button>
         <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
       </div>
