Fixed church input overflow

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -22,8 +22,8 @@
                 <div class="form-group">
                   <div class="input-group">
                     <span class="input-group-addon">To:</span>
-                    <div class="form-control text-left truncate">
-                      Bethany First Church of the Nazarene
+                    <div class="form-control text-left">
+                      <div class="truncate"><span>Bethany First Church of the Nazarene<span></div>
                     </div>
                   </div>
                 </div>
