Maybe fixed sending emails?

--- a/_includes/rsvp-modals.html
+++ b/_includes/rsvp-modals.html
@@ -44,11 +44,12 @@
         <h3 class="modal-title" id="myModalLabel">Delete RSVP</h3>
       </div>
       <div class="modal-body">
-        <p>Are you sure you want to delete your RSVP?</p>
+        <p>Your RSVP has been deleted.</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button id="delete-rsvp" type="button" class="btn btn-danger" onClick="window.location.reload();">Delete RSVP</button>
+        <!-- <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button id="delete-rsvp" type="button" class="btn btn-danger" onClick="window.location.reload();">Delete RSVP</button> -->
+        <button type="button" class="btn btn-default" data-dismiss="modal" onClick="window.location.reload();">Okay</button>
       </div>
     </div>
   </div>
